[project]
name = "hacs-ko-gbus"
version = "0.1.0"
description = "경기도 버스도착정보 HACS 커스텀 통합"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "holidays>=0.93",
]

[dependency-groups]
dev = [
    "holidays",
    "homeassistant>=2025.4.4",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-homeassistant-custom-component>=0.13.236",
    "ruff>=0.15.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
